--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-.gramsContainer{
-    width: 200px;
-    height: 200px;
-    background-color: gray;
+body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
-    flex-direction: column;
+    height: 100vh;
+    gap: 2rem;
 }
